Fixed scrollbar issue in Firefox

--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%); */
 
-	height: 600px;
+	height: 90%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -112,7 +112,7 @@ EXTERNAL LINKS AND ICONS
 	margin: .67em auto;
 	margin-bottom: .8em;
 	display: block;
-	overflow: scroll;
+	overflow: hidden;
 
 	animation: 1s fadein;
 	animation-delay: 1s;
